chore: update dotenv to version 16.5.0 and add hedera-agent-kit dependency
This commit updates the dotenv package to version 16.5.0 and introduces the hedera-agent-kit package at version 1.0.6. Additionally, the sample.env file has been removed as it is no longer needed.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@langchain/langgraph": "^0.2.34",
     "@langchain/openai": "^0.3.16",
     "bignumber.js": "^9.1.2",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.5.0",
+    "hedera-agent-kit": "^1.0.6"
   },
   "repository": {
     "type": "git",
