feat: enhance package.json and tsconfig.json for improved agent functionality
This commit adds new scripts to package.json for running the Hedera agent and setting up the agent environment. Additionally, it updates tsconfig.json to change the root directory and include the hedera-agent.ts file, ensuring proper TypeScript compilation and project structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "strict": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
@@ -27,7 +27,8 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "hedera-agent.ts"
   ],
   "exclude": [
     "node_modules",
