--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "ts-node tests/index.ts",
     "test-vitest": "vitest run",
     "prepare": "npm run build",
-    "build": "tsc"
+    "build": "tsc",
+    "agent": "ts-node hedera-agent.ts",
+    "setup": "node setup-agent.js"
   },
   "keywords": [],
   "author": "",
